Fix renderer files for event wrapping

--- a/blocks/melody/ff_module/ff_module-task-event-status/ff_module-task-event-status.less
+++ b/blocks/melody/ff_module/ff_module-task-event-status/ff_module-task-event-status.less
@@ -22,7 +22,6 @@
     &--is-saved,
     &--is-sent {
         color: @ff_colour_success;
-        background-color: lighten(@ff_colour_success, 45%);
     }
 }
 
